--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240708 Zarr writing.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240708 Zarr writing.ipynb
@@ -730,8 +730,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chunking: t=5, roi=4_000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chunks = (5,4_000)\n",
+    "chunks = (5, 3)\n",
+    "q = delayed.DelayedQueue()\n",
+    "s = delayed.DelayedBatchedZarrStore(\n",
+    "    q, output_dir / \"test_store/ch={1}/fov={2}\", write_options=dict(chunks=chunks)\n",
+    ")\n",
+    "# shape = (100, 15)\n",
+    "shape = (10, 5)\n",
+    "# t, ch, fov, roi\n",
+    "for t in range(5):\n",
+    "    s[t, \"CFP\", 8] = {\n",
+    "        1: dummy_value(shape, 0),\n",
+    "        2: dummy_value(shape, 10),\n",
+    "        3: dummy_value(shape, 0),\n",
+    "        4: dummy_value(shape, 10),\n",
+    "    }\n",
+    "    s[t, \"YFP\", 8] = {1: dummy_value(shape, 1), 2: dummy_value(shape, 11)}\n",
+    "s.write()\n",
+    "q.poll()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51",
    "metadata": {},
    "source": [
     "# Pipeline"
@@ -740,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63",
+   "id": "65",
    "metadata": {},
    "source": [
     "# Science analysis"
@@ -975,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,37 +1088,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_image(\n",
-    "    image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)),\n",
-    "    scale=1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_image(\n",
-    "    image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)),\n",
-    "    scale=1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmentation_masks[:, 8, 7].squeeze().shape"
+    "display_image(\n",
+    "    image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)),\n",
+    "    scale=1,\n",
+    ")"
    ]
   },
   {
@@ -1090,13 +1105,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np."
+    "display_image(\n",
+    "    image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)),\n",
+    "    scale=1,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segmentation_masks[:, 8, 7].squeeze().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,43 +1386,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_image(\n",
-    "    image.unstack(\n",
-    "        skimage.color.label2rgb(\n",
-    "            np.nan_to_num(segmentation_masks[:, 8, 417].squeeze()).astype(np.uint16)\n",
-    "        ),\n",
-    "        axis=2,\n",
-    "    ),\n",
-    "    scale=1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_image(\n",
-    "    image.unstack(\n",
-    "        skimage.color.label2rgb(\n",
-    "            np.nan_to_num(segmentation_masks[:, 8, 417].squeeze()).astype(np.uint16)\n",
-    "        ),\n",
-    "        axis=2,\n",
-    "    ),\n",
-    "    scale=1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.unstack(\n",
+    "        skimage.color.label2rgb(\n",
+    "            np.nan_to_num(segmentation_masks[:, 8, 417].squeeze()).astype(np.uint16)\n",
+    "        ),\n",
+    "        axis=2,\n",
+    "    ),\n",
+    "    scale=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.unstack(\n",
+    "        skimage.color.label2rgb(\n",
+    "            np.nan_to_num(segmentation_masks[:, 8, 417].squeeze()).astype(np.uint16)\n",
+    "        ),\n",
+    "        axis=2,\n",
+    "    ),\n",
+    "    scale=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1402,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1530,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1550,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "114",
+   "id": "116",
    "metadata": {},
    "source": [
     "# Export"
@@ -1600,7 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1750,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1760,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
