--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240709 Zarr writing.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240709 Zarr writing.ipynb
@@ -746,30 +746,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# chunks = (5,4_000)\n",
-    "chunks = (5, 3)\n",
+    "%%time\n",
+    "chunks = (5, 4_000)\n",
+    "num_rois = 3_700\n",
+    "# chunks = (5,4)\n",
     "q = delayed.DelayedQueue()\n",
     "s = delayed.DelayedBatchedZarrStore(\n",
     "    q, output_dir / \"test_store/ch={1}/fov={2}\", write_options=dict(chunks=chunks)\n",
     ")\n",
     "# shape = (100, 15)\n",
-    "shape = (10, 5)\n",
+    "# shape = (10, 5)\n",
+    "shapes = [(100, 15), (95, 16)]\n",
     "# t, ch, fov, roi\n",
     "for t in range(5):\n",
     "    s[t, \"CFP\", 8] = {\n",
-    "        1: dummy_value(shape, 0),\n",
-    "        2: dummy_value(shape, 10),\n",
-    "        3: dummy_value(shape, 0),\n",
-    "        4: dummy_value(shape, 10),\n",
+    "        idx: dummy_value(shapes[t % 2], 100 * t + idx) for idx in range(num_rois)\n",
     "    }\n",
-    "    s[t, \"YFP\", 8] = {1: dummy_value(shape, 1), 2: dummy_value(shape, 11)}\n",
+    "    s[t, \"YFP\", 8] = {\n",
+    "        idx: dummy_value(shapes[t % 2], 100 * t + idx) for idx in range(num_rois)\n",
+    "    }\n",
     "s.write()\n",
     "q.poll()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "chunks = (5, 4_000)\n",
+    "num_rois = 3_700\n",
+    "# chunks = (5,4)\n",
+    "q = delayed.DelayedQueue()\n",
+    "s = delayed.DelayedBatchedZarrStore(\n",
+    "    q, output_dir / \"test_store/ch={1}/fov={2}\", write_options=dict(chunks=chunks)\n",
+    ")\n",
+    "# shape = (100, 15)\n",
+    "# shape = (10, 5)\n",
+    "shapes = [(100, 15), (95, 16)]\n",
+    "# t, ch, fov, roi\n",
+    "for t in trange(13):\n",
+    "    s[t, \"CFP\", 8] = {\n",
+    "        idx: dummy_value(shapes[t % 2], 100 * t + idx) for idx in range(num_rois)\n",
+    "    }\n",
+    "    s[t, \"YFP\", 8] = {\n",
+    "        idx: dummy_value(shapes[t % 2], 100 * t + idx) for idx in range(num_rois)\n",
+    "    }\n",
+    "    s.write()\n",
+    "    for ch in [\"CFP\", \"YFP\"]:\n",
+    "        del s[t, ch, 8]\n",
+    "    if t % 5 == 0:\n",
+    "        q.poll()\n",
+    "# s.flush()\n",
+    "# q.poll()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "s.flush()\n",
+    "q.poll()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(s.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = zarr.open_array(\n",
+    "    \"/home/jqs1/scratch/microscopy/240627/zarr_test/test_store/ch=YFP/fov=8/\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "z[15, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57",
    "metadata": {},
    "source": [
     "# Pipeline"
@@ -778,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1096,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65",
+   "id": "71",
    "metadata": {},
    "source": [
     "# Science analysis"
@@ -1013,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1490,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1578,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1598,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1608,7 +1700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116",
+   "id": "122",
    "metadata": {},
    "source": [
     "# Export"
@@ -1638,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,7 +1817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1740,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1750,7 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1798,7 +1890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1809,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "135",
    "metadata": {},
    "outputs": [],
    "source": [
